@@ -1,5 +1,6 @@
 2005-08-29  Aaron Bockover  <aaron@aaronbock.net>
 	
+	* mediaengines/helix/HelixPlayer.cs: Fixed PCM set to 0 bug (314816)
 	* libbanshee/cd-info.c: More internals complete/working, cdparanoia
 	fix in patched gstreamer
 	* src/DBusIPC.cs: Virtual D-Bus methods for TogglePlaying(), Next(), 
